[package]
name = "paperclip_docs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.1"
paperclip = { version = "^0.7.1", features = ["actix4", "swagger-ui", "rapidoc"] }
dotenv = "^0.15.0"
serde = { version = "^1", features = ["derive"] }